# autoservice

./: db.sqlite3  manage.py  pyproject.toml
.pytest_cache/: .gitignore
MyService/: asgi.py  settings.py  urls.py  wsgi.py
autoservice/: admin.py  apps.py  form.py  models.py  serializers.py  signals.py  urls.py  views.py
autoservice/migrations/: 0001_initial.py
autoservice/static/css/: service.css
autoservice/templates/: base.html  client_orders.html  contact.html  create_order.html  index.html  update_order.html
